--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -63,7 +63,6 @@ header {
 
 .photo-hero img{
     width: 270px;
-    height: 100%;
     margin-bottom: -2px;
 }
 
@@ -145,14 +144,14 @@ header {
     letter-spacing: 1px;
 }
 
-.education {
+.about-me {
     display: flex;
     align-items: center;
     flex-direction: column;
-    width: 100px;
+    width: 145px;
 }
 
-.education a:hover {
+.about-me a:hover {
     letter-spacing: 1px;
 }
 
@@ -186,7 +185,6 @@ header {
 
 .galery {
     width: 100%;
-    height: 1000px;
     display: flex;
     justify-content: space-evenly;
     height: 100%;
@@ -201,59 +199,4 @@ header {
 .images-box img{
     width: 100%;
     margin-bottom: 10px;
-}
-
-/* footer /////////////////////////////////////////////////////////////////////////////////////
-/////////////////////////////////////////////////////////////////////////////////////////////////
-///////////////////////////////////////////////////////////////////////////////////////////////*/
-
-footer {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #11122b;
-    color: white;
-    padding: 30px 0 10px 0;
-}
-
-.links-wrapper {
-    margin-top: 20px;
-    width: 30%;
-    display: flex;
-    justify-content: center;
-}
-
-.nav-links {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
-    align-items: center;
-}
-
-.nav-links a {
-    text-decoration: none;
-    color: white;
-    font-size: 20px;
-    transition: 0.5s;
-}
-
-.footer-home i{
-    font-size: 25px;
-    color: white;
-    transition: 0.5s;
-}
-
-.footer-home i:hover {
-    color: #cea135;
-}
-
-.footer-services a:hover {
-    color: #cea135;
-}
-
-.footer-education a:hover {
-    color: #cea135;
 }
