--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -15,21 +15,29 @@ body {
 .navigation-wrapper {
     width: 100%;
     max-width: 1366px;
+    height: 100%;
 }
 
 header {
     width: 100%;
-    height: 650px;
-    background: rgba(0, 0, 0, 0.6) url("../images/background/6qy2w7.jpg");
-    background-blend-mode: darken;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
     color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 30px;
+    padding-top: 10px;
+    position: relative;
+}
+video {
+    width: 1366px;
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    filter: brightness(60%);
+}
+
+.box {
+    z-index: 0;
 }
 
 .header-info-wrapper {
@@ -164,6 +172,7 @@ header {
     width: 100%;
     display: flex;
     justify-content: center;
+    margin-top: 30px;
 }
 
 .content-wrapper {
