--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -25,19 +25,10 @@ header {
     flex-direction: column;
     align-items: center;
     padding-top: 10px;
-    position: relative;
-}
-video {
-    width: 1366px;
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    filter: brightness(60%);
-}
-
-.box {
-    z-index: 0;
+    background: rgba(0, 0, 0, 0.7) url("../images/background/sep09.webp");
+    background-blend-mode: darken;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .header-info-wrapper {
@@ -52,11 +43,12 @@ video {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    margin-bottom: 200px;
 }
 
 .header-left-bar {
     display: flex;
-    margin-left: 30px;
+    margin-left: 50px;
 }
 
 .hero-wrapper {
@@ -119,8 +111,7 @@ video {
 }
 
 .header-right-bar {
-    font-size: 40px;
-    margin-right: 30px;
+    margin-right: 50px;
     margin-left: 60px;   
     display: flex;
     flex-direction: column;
@@ -163,6 +154,10 @@ video {
     letter-spacing: 1px;
 }
 
+.quote {
+    font-size: 40px;
+}
+
 /* mid-page /////////////////////////////////////////////////////////////////////////////////////
 /////////////////////////////////////////////////////////////////////////////////////////////////
 ///////////////////////////////////////////////////////////////////////////////////////////////*/
@@ -172,7 +167,8 @@ video {
     width: 100%;
     display: flex;
     justify-content: center;
-    margin-top: 30px;
+    position: relative;
+    bottom: 150px;
 }
 
 .content-wrapper {
@@ -183,6 +179,7 @@ video {
     flex-direction: column;
     align-items: center;
     padding-top: 30px;
+    margin-bottom: -150px;
 }
 
 .title-of-galery {
