--- a/media-queries/media-about-me.css
+++ b/media-queries/media-about-me.css
@@ -56,5 +56,18 @@
         margin-bottom: 30px;
     }
 
+    .title-hero {
+        text-align: center;
+    }
+
+    .info-about-hero {
+        font-size: 16px;
+        line-height: 25px;
+    }
+
+    h1 {
+        font-size: 25px;
+    }
+
 
 } 
