--- a/media-queries/media-homepage.css
+++ b/media-queries/media-homepage.css
@@ -23,7 +23,7 @@
     }
 
     .social-media i{
-        font-size: 70px;
+        font-size: 50px;
     }
 
     .instagram {
@@ -127,14 +127,25 @@
         font-size: 16px;
     }
 
+    .header-right-bar {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
     .quote {
         font-size: 20px;
+        width: 70%;
     }
 
     .menu {
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+
+    .menu a {
+        font-size: 18px;
     }
 
     .about-me {
