--- a/css/homepage.css
+++ b/css/homepage.css
@@ -205,5 +205,10 @@ header {
 
 .images-box img{
     width: 100%;
-    margin-bottom: 10px;
+    padding-bottom: 10px;
+    transition: 0.3s;
+}
+
+.images-box img:hover {
+    
 }
